feat: add API exploration script
Add explore-api.ts which uses Playwright to:
- Launch browser to wegmans.com
- Intercept Algolia API requests
- Capture API key, app ID, index names, and store number
- Save raw responses to snapshots/ for analysis

Also fix tsconfig.json rootDir to support scripts/ directory.

--- a/wegmans-mcp/tsconfig.json
+++ b/wegmans-mcp/tsconfig.json
@@ -14,7 +14,7 @@
     "module": "NodeNext",
     "target": "ES2022",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "declaration": true,
     "sourceMap": true,
     "skipLibCheck": true
