feat: add store discovery script, confirm Geneva NY = store 74
- Add explore-stores.ts to discover /api/stores endpoint
- /api/stores returns complete store list with metadata
- Confirmed store 74 = Geneva, NY (300 Hamilton Street, 14456)
- Updated FINDINGS.md with evidence

--- a/wegmans-mcp/package.json
+++ b/wegmans-mcp/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "explore": "npx tsx scripts/explore-api.ts",
+    "explore:stores": "npx tsx scripts/explore-stores.ts",
     "test": "vitest run",
     "test:watch": "vitest"
   },
