--- a/wegmans-mcp/package.json
+++ b/wegmans-mcp/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "playwright": "^1.58.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
