feat: add committed response snapshots with meta-test
- Move response snapshots to snapshots/responses/ (committed)
- Keep exploration files gitignored (contain API keys)
- Add all-responses.test.ts meta-test that validates ALL snapshots
- Update existing tests to use new path

Response snapshots:
- response-0-200.json: discovery_pages (45 hits)
- response-1-200.json: products multi-query (93 hits)
- response-2-200.json: products multi-query (93 hits)
- response-5-200.json: products multi-query (90 hits)

24 tests passing.

--- a/wegmans-mcp/.gitignore
+++ b/wegmans-mcp/.gitignore
@@ -5,8 +5,13 @@ node_modules/
 dist/
 build/
 
-# Snapshot data (contains API keys and changes over time)
-snapshots/*.json
+# Snapshot data - exploration files contain API keys
+snapshots/exploration-*.json
+snapshots/stores-exploration.json
+snapshots/*.png
+
+# Keep snapshots/responses/ - these are safe to commit
+# !snapshots/responses/
 
 # Environment files
 .env
