--- a/wegmans-mcp/package.json
+++ b/wegmans-mcp/package.json
@@ -15,11 +15,14 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "better-sqlite3": "^12.6.2",
     "playwright": "^1.58.1",
     "typescript": "^5.9.3",
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@fast-check/vitest": "^0.2.4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.2.0",
     "tsx": "^4.21.0",
     "vitest": "^4.0.18"
