feat: add catalog fetch script and categories/tags design
- Add fetch-catalog.ts script that fetches full store catalog
- Uses dynamic query planning based on category facet counts
- Drills into subcategories when >1000 products
- Splits uncategorized products by ebt/availability attributes
- Achieves 98.1% coverage (28,780/29,348 products) in 155 queries

- Add categories/tags feature design doc covering:
  - Schema changes (category_path, tags on products table)
  - Ontology tables (categories, tags) populated on startup
  - Views for relational queries (product_categories, product_tags)
  - Faceted search support via filters parameter

- Update .gitignore to exclude large catalog dumps

--- a/wegmans-mcp/.gitignore
+++ b/wegmans-mcp/.gitignore
@@ -10,6 +10,9 @@ snapshots/exploration-*.json
 snapshots/stores-exploration.json
 snapshots/*.png
 
+# Full catalog dumps (large files, can be regenerated)
+snapshots/catalog-*.json
+
 # Keep snapshots/responses/ - these are safe to commit
 # !snapshots/responses/
 
