--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wegmans-mcp",
+  "name": "forager",
   "version": "0.1.0",
   "description": "MCP server for querying Wegmans product data",
   "type": "module",
   "main": "dist/src/index.js",
   "bin": {
-    "wegmans-mcp": "dist/src/index.js"
+    "forager": "dist/src/index.js"
   },
   "files": [
     "dist/src/**/*.js",
