--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ Thumbs.db
 # Logs
 *.log
 npm-debug.log*
+
+# Database files (data dir is ~/.local/share/forager/, but just in case)
+*.db
+*.db-journal
+*.db-wal
