--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "explore": "npx tsx scripts/explore-api.ts",
-    "explore:stores": "npx tsx scripts/explore-stores.ts",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -25,13 +23,16 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "acorn": "^8.15.0",
+    "acorn-walk": "^8.3.4",
     "better-sqlite3": "^12.6.2",
-    "playwright": "^1.58.1",
+    "eslint-scope": "^9.1.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@fast-check/vitest": "^0.2.4",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/estree": "^1.0.8",
     "@types/node": "^25.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
