--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "acorn-walk": "^8.3.4",
     "better-sqlite3": "^12.6.2",
     "eslint-scope": "^9.1.0",
+    "undici": "^7.21.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
